--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Audience Analysis</title>
 </head>
 <body>
@@ -51,9 +51,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Isaias Trujillo. All rights reserved.</p>
+        <h6>Superheroes</h6>&copy; 2025 Isaias Trujillo. All rights reserved.</h6>
     </footer>
-</body>
-</html>
 </body>
 </html>
