--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Competitors and Competition</title>
 </head>
 <body>
@@ -61,7 +61,7 @@
             <br><br>7. **Regular Updates:** Ensuring that the website is regularly updated with fresh content can keep users coming back for more.
     </main>
     <footer>
-        <p>&copy; 2025 Isaias Trujillo. All rights reserved.</p>
+        <h6>Superheroes</h6>&copy; 2025 Isaias Trujillo. All rights reserved.</h6>
     </footer>
 </body>
 </html>
