--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -51,7 +51,7 @@
         </section>
     </main>
     <footer>
-        <h6>Superheroes</h6>&copy; 2025 Isaias Trujillo. All rights reserved.</h6>
+        <h6>&copy; 2025 Isaias Trujillo. All rights reserved.</h6>
     </footer>
 </body>
 </html>
