--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -61,7 +61,7 @@
             <br><br>7. **Regular Updates:** Ensuring that the website is regularly updated with fresh content can keep users coming back for more.
     </main>
     <footer>
-        <h6>Superheroes</h6>&copy; 2025 Isaias Trujillo. All rights reserved.</h6>
+        <h6>&copy; 2025 Isaias Trujillo. All rights reserved.</h6>
     </footer>
 </body>
 </html>
