--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -40,7 +40,7 @@
         
 </main>
 <footer>
-    <h6>Superheroes</h6>&copy; 2025 Isaias Trujillo. All rights reserved.</h6>
+    <h6>&copy; 2025 Isaias Trujillo. All rights reserved.</h6>
 </footer>
 </body>
 </html>
