--- a/utahtech3/faculty.html
+++ b/utahtech3/faculty.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="wrapper"> 
+    </div>
     <header>
         <h1> Utah Tech University</h1>
     </header>
@@ -16,18 +18,16 @@
       <a href="faculty.html">Faculty</a> &nbsp;
       <a href="alumni.html">Alumni</a>
   </nav>
-    <main>
         <div id="facultyhero">
         </div>
+    <main>
         <h2>Faculty at Utah Tech University</h2>
-        <dl>
-            <dt>Active  Learning</dt>
-            <dd>Classes get students ready to enter the work industry and provide them with the skills needed today.</dd>
-            <dt>Online Classes</dt>
-            <dd>15% of classes at Utah Tech are online and accessible to those outside the region.</dd>
-            <dt>Small Class Size</dt>
-            <dd>Classes are small, averaging 20:1 student-to-teacher ratios.</dd>
-        </dl>
+            <h3>Active  Learning</h3>
+            <p>Classes get students ready to enter the work industry and provide them with the skills needed today.</p>
+            <h3>Online Classes</h3>
+            <p>15% of classes at Utah Tech are online and accessible to those outside the region.</p>
+            <h3>Small Class Size</h3>
+            <p>Classes are small, averaging 20:1 student-to-teacher ratios.</p>
     </main>
     <footer>
         <p>&copy; 2023 Utah Tech University</p>
