--- a/utahtech4/faculty.html
+++ b/utahtech4/faculty.html
@@ -13,9 +13,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a> &nbsp;</li>
-            <li><a href="students.html">Students</a> &nbsp;</li>
-            <li><a href="faculty.html">Faculty</a> &nbsp;</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="students.html">Students</a></li>
+            <li><a href="faculty.html">Faculty</a></li>
             <li><a href="alumni.html">Alumni</a></li>
         </ul>
     </nav>
