--- a/utahtech4/index.html
+++ b/utahtech4/index.html
@@ -14,10 +14,10 @@
   </header>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a>&nbsp;</li>
-      <li><a href="students.html">Students</a>&nbsp;</li>
-      <li><a href="faculty.html">Faculty</a>&nbsp;</li>
-      <li><a href="alumni.html">Alumni</a>&nbsp;</li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="students.html">Students</a></li>
+      <li><a href="faculty.html">Faculty</a></li>
+      <li><a href="alumni.html">Alumni</a></li>
     </ul>
   </nav>
   <div id="homehero"> 
