--- a/utahtech4/students.html
+++ b/utahtech4/students.html
@@ -14,18 +14,18 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a> &nbsp;</li>
-        <li><a href="students.html">Students</a> &nbsp;</li>
-        <li><a href="faculty.html">Faculty</a> &nbsp;</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="students.html">Students</a></li>
+        <li><a href="faculty.html">Faculty</a></li>
         <li><a href="alumni.html">Alumni</a></li>
       </ul>
     </nav>
         <div id="studenthero">
         </div>
+        <main>
         <h2>Why Attend Utah Tech?</h2>
         <img src="utahtechimages/students.jpg" alt="Students on Campus" title="Students on Campus">
           <div>
-        <main>
           <dl>
             <dt>Open</dt>
             <dd>Utah Tech University is an open-access institution that offers access to open educational resources.</dd>
@@ -36,12 +36,12 @@
             <dt>Polytechnic</dt>
             <dd>All UT students gain real-world learning experiences through industry partnerships.</dd>
           </dl>
+          </div>
         </main>
         <footer>
           Copyright &copy; 2025 Utah Tech University<br>
           <a href="mailto:d00537694@utahtech.edu">d00537694@utahtech.edu</a>
         </footer>
       </div>
-  </div>
     </body>
 </html>
